--- a/unit-12-projects/connect_4_oop/connect4.css
+++ b/unit-12-projects/connect_4_oop/connect4.css
@@ -1,4 +1,33 @@
 /* game board table */
+#header {
+  display: flex;
+  justify-content: center;
+  margin: 3rem;
+  font-family: Hack, monospace;
+}
+
+input {
+  color:#0F0F6D;
+  font-size: 1.5em;
+  border: solid;
+  border-radius: 10px;
+  padding:1rem;
+  margin: 10px;
+  width: 10rem;
+}
+
+button {
+
+  background: #0F0F6D;
+  color: #ffffff;
+  cursor: pointer;
+  font-size: 1.5em;
+  padding: 0.5rem;
+  border: 0;
+  border-radius: 10px;
+  width: auto;
+}
+
 #game {
   display: flex;
   align-items: center;
@@ -6,9 +35,10 @@
 }
 
 #board td {
-  width: 50px;
-  height: 50px;
-  border: solid 1px #666;
+  width: 5rem;
+  height: 5rem;
+  border: solid 2px #666;
+  border-radius: 5px;
 }
 
 /* pieces are div within game table cells: draw as colored circles */
@@ -18,6 +48,7 @@
   width: 80%;
   height: 80%;
   border-radius: 50%;
+  z-index: 2;
   animation-name: dropdown;
   animation-duration: 2s;
 }
@@ -32,19 +63,10 @@
  }
 
 
-
-.piece.p1 {
-  background-color: red;
-}
-
-.piece.p2 {
-  background-color: blue;
-}
-
 /* column-top is table row of clickable areas for each column */
 
 #column-top td {
-  border: dashed 1px lightgray;
+  border: dashed 3px lightgray;
 }
 
 #column-top td:hover {
