--- a/unit-39-projects/eight-ball/src/App.css
+++ b/unit-39-projects/eight-ball/src/App.css
@@ -1,38 +1,19 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  position: absolute;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 1024px;
+  height: auto;
+  background: #ffffff;
+  color: purple;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  border: 1px solid rgba(87, 12, 12, 0.2);
+  box-shadow: 0px 2px 10px rgba(211, 38, 38, 1);
+  border-radius: 10px;
+  padding: 10px;
+  box-sizing: border-box;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin: auto;
 }
