--- a/unit-39-projects/eight-ball/src/App.css
+++ b/unit-39-projects/eight-ball/src/App.css
@@ -1,19 +1,30 @@
 .App {
-  position: absolute;
-  display: flex;
+  display: grid;
+  place-items: center;
   width: 1024px;
-  height: auto;
   background: #ffffff;
   color: purple;
   justify-content: center;
   border: 1px solid rgba(87, 12, 12, 0.2);
   box-shadow: 0px 2px 10px rgba(211, 38, 38, 1);
   border-radius: 10px;
-  padding: 10px;
+  padding: 20px 0;
   box-sizing: border-box;
   top: 0px;
   bottom: 0px;
   left: 0px;
   right: 0px;
   margin: auto;
+}
+
+.Heading {
+  display: grid;
+  place-items: center;
+  font-size: 2em;
+}
+
+.Click {
+  display: grid;
+  place-items: center;
+  font-size: 1.5em;
 }
