finish survey with flash message and conditionals

--- a/unit-19-projects/flask-survey/templates/question.html
+++ b/unit-19-projects/flask-survey/templates/question.html
@@ -1,4 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>I'm question page</h1>
+<h1>{{ question.question }}</h1>
+<form action="/answer" method="POST">
+  {% for choice in question.choices %}
+  <p><input type="radio" name="answer" value="{{ choice }}"> {{ choice }}</p>
+  {% endfor %}
+  </select>
+  <button>Continue</button>
+</form>
 {% endblock %}
