--- a/unit-19-projects/flask-survey/templates/base.html
+++ b/unit-19-projects/flask-survey/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flask Survey</title>
+    <title>{% block title %}{% endblock %}</title>
   </head>
   <body>
     <!-- {% with msg = get_flashed_messages(with_categories=true) %} -->
