--- a/unit-19-projects/flask-survey/templates/start.html
+++ b/unit-19-projects/flask-survey/templates/start.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %} 
+
+{% block title %}
+Flask Survey
+{% endblock %}
+
 {% block content %}
-<h1>I'm start page</h1>
 <h1>{{ survey.title }}</h1>
 <p>{{ survey.instructions }}</p>
 
