--- a/unit-4-projects/todo-app/style.css
+++ b/unit-4-projects/todo-app/style.css
@@ -1,13 +1,13 @@
-body {
+/* body {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   background-color: #feefdd;
   color: #6d2e46;
-}
+} */
 
-.dark-mode {
+/* .dark-mode {
   background-color: #070313;
   color: #f4d06f;
 }
@@ -22,8 +22,6 @@ h1 {
   font-size: 3rem;
 }
 
-.todo-body {
-}
 
 input[type="checkbox"] {
   height: 0;
@@ -65,12 +63,67 @@ input:checked + #switch-label:after {
 
 #switch-label:active:after {
   width: 130px;
-}
+} */
 
 /* centering */
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  font-family: sans-serif;
+  text-align: center;
+  border-radius: 5px;
+  border: 4px solid black;
+
+  width: 40rem;
+  height: auto;
+  margin: 0 auto;
+  padding: 30px;
+}
+
+form {
+  display: block;
+  position: relative;
+  margin: 0 5px 30px 0;
+}
+
+input {
+  border-radius: 5px;
+  font-size: 2em;
+  padding-left: 15px;
+  transition: 0.2s all linear;
+}
+
+input:focus {
+  padding-left: 20px;
+  padding-right: 10px;
+  border: 5px solid purple;
+}
+
+#submitButton {
+  background: #c94d46;
+  padding: 5px;
+  border: 1px solid #832420;
+  border-radius: 5px;
+  width: 45px;
+  color: #fff;
+  font-size: 1.8em;
+}
+
+li {
+  list-style: none;
+  text-align: center;
+  padding: 10px 10px 10px 30px;
+  margin: 10px;
+  border: 1px solid black;
+  border-radius: 5px;
+  font-size: 1.5rem;
+}
+
+button {
+  float: right;
+  background: #c94d46;
+  padding: 5px;
+  border: 1px solid #832420;
+  border-radius: 5px;
+  width: 45px;
+  color: #fff;
+  font-size: 18px;
 }
