--- a/unit-23-projects/blogly/templates/base.html
+++ b/unit-23-projects/blogly/templates/base.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>{% block title %}Happiness Blog{% endblock %}</title>
+    <script
+      src="https://kit.fontawesome.com/64405fd40b.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
