[main] functional version 3 many-to-many relationship posts & tags

--- a/unit-23-projects/blogly/static/styles.css
+++ b/unit-23-projects/blogly/static/styles.css
@@ -1,7 +1,9 @@
 body {
   font-family: "Quicksand", sans-serif;
-  display: flex;
-  justify-content: center;
   font-size: 2em;
   text-align: center;
+}
+
+.input-lg {
+  font-size: 1em;
 }
