--- a/unit-23-projects/blogly/templates/posts/homepage.html
+++ b/unit-23-projects/blogly/templates/posts/homepage.html
@@ -7,8 +7,15 @@ block content %}
 <hr />
 <div class="m-5">
   <h2>{{ post.title }}</h2>
-  <p>{{ post.content }}</p>
+  <p class="text-left">{{ post.content }}</p>
 
   <small> By {{ post.user.get_full_name }} on {{ post.friendly_date }}</small>
+  <br />
+  <small>
+    Tags: {% for tag in post.tags %}
+    <span class="badge badge-info px-3 py-2">{{tag.name}}</span>{% endfor %}
+  </small>
 </div>
-{% endfor %} {% endblock %}
+{% endfor %}
+
+<a href="/users">Users Page</a> | <a href="/tags">Tags Page</a> {% endblock %}
