--- a/unit-23-projects/blogly/templates/users/new.html
+++ b/unit-23-projects/blogly/templates/users/new.html
@@ -9,10 +9,11 @@ block content %}
     <label for="first_name" class="control-label">First Name</label>
     <input
       type="text"
-      class="form-control"
+      class="form-control input-lg"
       id="first_name"
       name="first_name"
       placeholder="Enter a first name"
+      autofocus
     />
   </div>
   <div class="form-group row">
@@ -20,7 +21,7 @@ block content %}
 
     <input
       type="text"
-      class="form-control"
+      class="form-control input-lg"
       id="last_name"
       name="last_name"
       placeholder="Enter a last name"
@@ -31,7 +32,7 @@ block content %}
 
     <input
       type="text"
-      class="form-control"
+      class="form-control input-lg"
       id="image_url"
       name="image_url"
       placeholder="Optional: Input an image URL for profile"
