[main] read through codebase and list todos

--- a/unit-16-cumulative-project/hacker-news/css/stories.css
+++ b/unit-16-cumulative-project/hacker-news/css/stories.css
@@ -16,7 +16,6 @@
   margin: 20px 30px;
 }
 
-
 /* Individual stories */
 
 .story-link {
@@ -37,3 +36,9 @@
 .story-user {
   display: block;
 }
+
+/* TODO: favorite my stories */
+
+/* TODO: star for favorite */
+
+/* TODO: trash bin for remove */
