[main] functional feedbacks CRUD

--- a/unit-24-projects/3-Flask-feedback/templates/404.html
+++ b/unit-24-projects/3-Flask-feedback/templates/404.html
@@ -1,7 +1,23 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} 
 
-{% block title %} Edit Feedback {% endblock %}
+{% block title %}404 Page Not Found{% endblock %}} 
 
 {% block content %}
-
+    <div class="m-auto">
+      <iframe
+        src="https://giphy.com/embed/8L0Pky6C83SzkzU55a"
+        width="480"
+        height="480"
+        frameborder="0"
+        class="giphy-embed"
+        allowfullscreen
+      ></iframe>
+    </div>
+    
+    <div class="m-auto">
+      <a href="/" class="h1 text-success"
+        ><i class="fas fa-undo"></i> &ensp; Go back to Home Page</a
+      >
+    </div>
 {% endblock %}
+    
