--- a/unit-26-project/warbler/templates/users/detail.html
+++ b/unit-26-project/warbler/templates/users/detail.html
@@ -1,9 +1,18 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
 
-{% block content %}
-
-<div id="warbler-hero" class="full-width"></div>
-<img src="{{ user.image_url }}" alt="Image for {{ user.username }}" id="profile-avatar">
+<div id="warbler-hero" class="full-width">
+  <img
+    src="{{ user.header_image_url }}"
+    alt="Header image for {{ user.username }}"
+    id="header-image"
+    style="width: 100%; height: 380px"
+  />
+</div>
+<img
+  src="{{ user.image_url }}"
+  alt="Image for {{ user.username }}"
+  id="profile-avatar"
+/>
 <div class="row full-width">
   <div class="container">
     <div class="row justify-content-end">
@@ -18,13 +27,17 @@
           <li class="stat">
             <p class="small">Following</p>
             <h4>
-              <a href="/users/{{ user.id }}/following">{{ user.following | length }}</a>
+              <a href="/users/{{ user.id }}/following"
+                >{{ user.following | length }}</a
+              >
             </h4>
           </li>
           <li class="stat">
             <p class="small">Followers</p>
             <h4>
-              <a href="/users/{{ user.id }}/followers">{{ user.followers | length }}</a>
+              <a href="/users/{{ user.id }}/followers"
+                >{{ user.followers | length }}</a
+              >
             </h4>
           </li>
           <li class="stat">
@@ -33,12 +46,15 @@
           </li>
           <div class="ml-auto">
             {% if g.user.id == user.id %}
-            <a href="/users/profile" class="btn btn-outline-secondary">Edit Profile</a>
+            <a href="/users/profile" class="btn btn-outline-secondary"
+              >Edit Profile</a
+            >
             <form method="POST" action="/users/delete" class="form-inline">
-              <button class="btn btn-outline-danger ml-2">Delete Profile</button>
+              <button class="btn btn-outline-danger ml-2">
+                Delete Profile
+              </button>
             </form>
-            {% elif g.user %}
-            {% if g.user.is_following(user) %}
+            {% elif g.user %} {% if g.user.is_following(user) %}
             <form method="POST" action="/users/stop-following/{{ user.id }}">
               <button class="btn btn-primary">Unfollow</button>
             </form>
@@ -46,8 +62,7 @@
             <form method="POST" action="/users/follow/{{ user.id }}">
               <button class="btn btn-outline-primary">Follow</button>
             </form>
-            {% endif %}
-            {% endif %}
+            {% endif %} {% endif %}
           </div>
         </ul>
       </div>
@@ -58,13 +73,13 @@
 <div class="row">
   <div class="col-sm-3">
     <h4 id="sidebar-username">@{{ user.username }}</h4>
-    <p>BIO HERE</p>
-    <p class="user-location"><span class="fa fa-map-marker"></span>LOCATION HERE</p>
+    <p>{{ user.bio }}</p>
+    <p class="user-location">
+      <span class="fa fa-map-marker"></span>{{ user.location }}
+    </p>
   </div>
 
-  {% block user_details %}
-  {% endblock %}
-
+  {% block user_details %} {% endblock %}
 </div>
 
 {% endblock %}
