--- a/unit-26-project/warbler/templates/users/show.html
+++ b/unit-26-project/warbler/templates/users/show.html
@@ -1,26 +1,39 @@
-{% extends 'users/detail.html' %}
-{% block user_details %}
-  <div class="col-sm-6">
-    <ul class="list-group" id="messages">
+{% extends 'users/detail.html' %} {% block user_details %}
+<div class="col-sm-6">
+  <ul class="list-group" id="messages">
+    {% for message in messages %}
 
-      {% for message in messages %}
+    <li class="list-group-item">
+      <a href="/messages/{{ message.id }}" class="message-link" />
 
-        <li class="list-group-item">
-          <a href="/messages/{{ message.id }}" class="message-link"/>
+      <a href="/users/{{ user.id }}">
+        <img
+          src="{{ user.image_url }}"
+          alt="user image"
+          class="timeline-image"
+        />
+      </a>
 
-          <a href="/users/{{ user.id }}">
-            <img src="{{ user.image_url }}" alt="user image" class="timeline-image">
-          </a>
+      <div class="message-area">
+        <a href="/users/{{ user.id }}">@{{ user.username }}</a>
+        <span class="text-muted"
+          >{{ message.timestamp.strftime('%d %B %Y') }}</span
+        >
+        <p>{{ message.text }}</p>
+      </div>
 
-          <div class="message-area">
-            <a href="/users/{{ user.id }}">@{{ user.username }}</a>
-            <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
-            <p>{{ message.text }}</p>
-          </div>
-        </li>
+      {% if g.user.id != message.user.id %}
+      <form class="like" method="post" action="/messages/{{ message.id }}/like">
+        <button
+          class="btn btn-md {{ 'btn-primary' if message.id in likes else 'btn-danger' }}"
+        >
+          <i class="fa fa-star"></i>
+        </button>
+      </form>
+      {% endif %}
+    </li>
 
-      {% endfor %}
-
-    </ul>
-  </div>
+    {% endfor %}
+  </ul>
+</div>
 {% endblock %}
