[main] user's liked message page

--- a/unit-26-project/warbler/templates/home.html
+++ b/unit-26-project/warbler/templates/home.html
@@ -68,7 +68,7 @@
             class="
                 btn 
                 btn-sm 
-                {{'btn-primary' if msg.id in likes else 'btn-secondary'}}"
+                {{'btn-danger' if msg.id in likes else 'btn-secondary'}}"
           >
             <i class="fa fa-heart"></i>
           </button>
