--- a/unit-26-project/warbler/templates/users/show.html
+++ b/unit-26-project/warbler/templates/users/show.html
@@ -4,37 +4,37 @@
     {% for message in messages %}
 
     <li class="list-group-item">
-      <a href="/messages/{{ message.id }}" class="message-link" />
+      <a href="/messages/{{ message.id }}" class="message-link">
+        <a href="/users/{{ user.id }}">
+          <img
+            src="{{ user.image_url }}"
+            alt="user image"
+            class="timeline-image"
+          />
+        </a>
 
-      <a href="/users/{{ user.id }}">
-        <img
-          src="{{ user.image_url }}"
-          alt="user image"
-          class="timeline-image"
-        />
+        <div class="message-area">
+          <a href="/users/{{ user.id }}">@{{ user.username }}</a>
+          <span class="text-muted"
+            >{{ message.timestamp.strftime('%d %B %Y') }}</span
+          >
+          <p>{{ message.text }}</p>
+        </div>
+
+        {% if g.user.id != message.user.id %}
+        <form
+          style="z-index: 10"
+          method="POST"
+          action="/messages/{{ message.id }}/like"
+        >
+          <button
+            class="btn btn-sm {{ 'btn-danger' if message.id in likes else 'btn-secondary' }}"
+          >
+            <i class="fa fa-heart"></i>
+          </button>
+        </form>
+        {% endif %}
       </a>
-
-      <div class="message-area">
-        <a href="/users/{{ user.id }}">@{{ user.username }}</a>
-        <span class="text-muted"
-          >{{ message.timestamp.strftime('%d %B %Y') }}</span
-        >
-        <p>{{ message.text }}</p>
-      </div>
-
-      {% if g.user.id != message.user.id %}
-      <form
-        style="z-index: 10"
-        method="POST"
-        action="/messages/{{ message.id }}/like"
-      >
-        <button
-          class="btn btn-sm {{ 'btn-danger' if message.id in likes else 'btn-secondary' }}"
-        >
-          <i class="fa fa-heart"></i>
-        </button>
-      </form>
-      {% endif %}
     </li>
     {% endfor %}
   </ul>
